--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Memo – Minimalist Memory Matching Game</title>
+    <meta
+      name="description"
+      content="Memo is a minimalist memory matching game where patterns, colors, and shapes come to play. Simple, sleek, and surprisingly tricky."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://memo.gprojects.dev/" />
+    <meta
+      property="og:title"
+      content="Memo – Minimalist Memory Matching Game"
+    />
+    <meta
+      property="og:description"
+      content="How well do you remember the basics? Patterns, colors, and shapes return in Memo — a clean, modern take on the classic memory game."
+    />
+    <meta
+      property="og:image"
+      content="https://memo.gprojects.dev/og-image.png"
+    />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://memo.gprojects.dev/" />
+    <meta
+      name="twitter:title"
+      content="Memo – Minimalist Memory Matching Game"
+    />
+    <meta
+      name="twitter:description"
+      content="How well do you remember the basics? Patterns, colors, and shapes return in Memo — a clean, modern take on the classic memory game."
+    />
+    <meta
+      name="twitter:image"
+      content="https://memo.gprojects.dev/og-image.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
